--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -23,8 +23,7 @@ body {
 }
 
 .object > li {
-  height: 20px;
-  width: 20px;
+
   position: absolute;
   font-size: 12px;
   font-weight: 900;
@@ -34,6 +33,8 @@ body {
 
 .player {
   background-color: rgb(177, 163, 163);
+  height: 20px; 
+  width: 20px;
   left: 290px;
   top: 290px;
   border: 1px solid black;
@@ -57,4 +58,10 @@ body {
   color: red
 }
 
-
+.bullet {
+  height: 4px;
+  width: 4px;
+  background-color: black;
+  left: 20px;
+  top: 30px;
+}
