--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -1,4 +1,3 @@
-
 * {
   padding: 0;
   margin: 0;
@@ -15,32 +14,16 @@ body {
   align-items: center;
 }
 
-.shell {
-  height: 600px;
-  width: 600px;
-  background-color: lightblue;
-  position: relative;
-}
-
-.object > li {
-
-  position: absolute;
-  font-size: 12px;
-  font-weight: 900;
-  line-height: 20px;
-  text-align: center;
-}
-
 .player {
   background-color: rgb(177, 163, 163);
-  height: 20px; 
+  height: 20px;
   width: 20px;
   left: -30px;
   top: -30px;
   border: 1px solid black;
 }
 
-.player .dir{
+.player .dir {
   position: absolute;
   height: 4px;
   width: 20px;
@@ -51,11 +34,11 @@ body {
 }
 
 .player .self {
-  color: #1e1e1e
+  color: #1e1e1e;
 }
 
 .player .enemy {
-  color: red
+  color: red;
 }
 
 .bullet {
@@ -64,4 +47,38 @@ body {
   background-color: black;
   left: -4px;
   top: -4px;
+}
+
+.shell {
+  height: 600px;
+  width: 600px;
+  background-color: lightblue;
+  position: relative;
+}
+
+.object > li {
+  position: absolute;
+  font-size: 12px;
+  font-weight: 900;
+  line-height: 20px;
+  text-align: center;
+}
+
+.tank {
+  background-color: rgb(177, 163, 163);
+  height: 20px;
+  width: 20px;
+  left: -30px;
+  top: -30px;
+  border: 1px solid black;
+}
+
+.barrel {
+  position: absolute;
+  height: 4px;
+  width: 20px;
+  background-color: black;
+  top: 10px;
+  left: 10px;
+  transform-origin: 0px 2px;
 }
