--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -13,33 +13,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.player {
-  background-color: rgb(177, 163, 163);
-  height: 20px;
-  width: 20px;
-  left: -30px;
-  top: -30px;
-  border: 1px solid black;
-}
-
-.player .dir {
-  position: absolute;
-  height: 4px;
-  width: 20px;
-  background-color: black;
-  top: 10px;
-  left: 10px;
-  transform-origin: 0px 2px;
-}
-
-.player .self {
-  color: #1e1e1e;
-}
-
-.player .enemy {
-  color: red;
+  background-color: #b1b5b8;
 }
 
 .bullet {
@@ -112,4 +86,13 @@ body {
   top: 0px;
   height: 40px;
   width: 100px;
+}
+
+.text{
+  text-align: center;
+  text-shadow: 3px 3px 10px rgba(0, 0, 0, 0.5);
+}
+
+.text li{
+  margin-top: 10px;
 }
